--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/zaikinale/frontend-project-44/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/zaikinale/frontend-project-44/actions)",
   "main": "index.js",
+  "type": "module",
+  "bin": {
+    "brain-games": "bin/brain-games.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
