--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.20.0",
+    "eslint": "^9.20.1",
+    "globals": "^16.0.0",
+    "typescript-eslint": "^8.24.1"
   }
 }
