--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "bin": {
-    "brain-games": "bin/brain-games.js"
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,8 +18,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
+    "chalk": "^5.4.1",
     "eslint": "^9.20.1",
     "globals": "^16.0.0",
+    "readline": "^1.3.0",
     "typescript-eslint": "^8.24.1"
   }
 }
