fix_problem_name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@hexlet/frontend-project-44",
+  "name": "@hexlet/code",
   "version": "1.0.1",
   "description": "[![Actions Status](https://github.com/zaikinale/frontend-project-44/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/zaikinale/frontend-project-44/actions)",
   "main": "index.js",
