--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "readline-sync": "^1.4.10"
+    "readline-sync": "^1.4.10",
+    "typescript": "^5.8.2"
   },
   "devDependencies": {
     "@eslint/create-config": "^1.0.0",
@@ -29,8 +30,6 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^4.6.2",
     "globals": "^16.0.0",
     "readline": "^1.3.0",
     "typescript-eslint": "^8.26.0"
