--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "@eslint/create-config": "^1.0.0",
     "@eslint/eslintrc": "^3.3.0",
     "@eslint/js": "^9.21.0",
+    "@stylistic/eslint-plugin": "^4.2.0",
     "chalk": "^5.4.1",
     "eslint": "^8.57.1",
+    "eslint-plugin-fp": "^2.3.0",
+    "fp": "^0.1.0",
+    "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
