--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "license": "ISC",
   "dependencies": {
     "readline-sync": "^1.4.10",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "eslint-plugin-fp": "^2.3.0",
+    "fp": "^0.1.0"
   },
   "devDependencies": {
     "@eslint/create-config": "^1.0.0",
@@ -28,8 +30,6 @@
     "@stylistic/eslint-plugin": "^4.2.0",
     "chalk": "^5.4.1",
     "eslint": "^8.57.1",
-    "eslint-plugin-fp": "^2.3.0",
-    "fp": "^0.1.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.31.0",
